infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec: 
  rules:
    - host: app.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service: 
                name: auth-srv
                port: 
                  number: 3000
          - path: /api/vehicles/?(.*)
            pathType: Prefix
            backend:
              service: 
                name: vehicles-srv
                port:
                  number: 3000
          - path: /api/routes/?(.*)
            pathType: Prefix
            backend:
              service: 
                name: routes-srv
                port: 
                  number: 3000
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service: 
                name: orders-srv
                port: 
                  number: 3000
